--- a/GrpcServer/Properties/launchSettings.json
+++ b/GrpcServer/Properties/launchSettings.json
@@ -1,6 +1,13 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
+    },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
