--- a/launchSettings.json
+++ b/launchSettings.json
@@ -4,7 +4,8 @@
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
       "serviceActions": {
-        "grpcserver": "StartDebugging"
+        "grpcserver": "StartDebugging",
+        "grpcclientservice": "StartDebugging"
       }
     }
   }
